[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/world_edtior/editor/dialog/base/CreateDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/world_edtior/editor/dialog/CreateChapterDialog.gd" type="Script" id=2]

[node name="CreateChapterDialog" instance=ExtResource( 1 )]
margin_bottom = 160.0
window_title = "Create Chapter"
script = ExtResource( 2 )

[node name="MarginContainer" parent="." index="1"]
margin_bottom = 153.0

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_bottom = 148.0

[node name="MarginContainer" parent="MarginContainer/VBoxContainer" index="0"]
margin_bottom = 98.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer" index="0"]
margin_right = 413.0
margin_bottom = 98.0
columns = 2

[node name="lbl_chapter_name" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="0"]
margin_top = 10.0
margin_right = 197.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Chapter Name : "

[node name="le_chapter_name" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="1"]
margin_left = 205.0
margin_right = 413.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="lbl_file_path" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="2"]
margin_top = 63.0
margin_right = 197.0
margin_bottom = 88.0
size_flags_horizontal = 3
text = "File Path :"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="3"]
margin_left = 205.0
margin_top = 53.0
margin_right = 413.0
margin_bottom = 98.0

[node name="le_file_path" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/HBoxContainer" index="0"]
margin_right = 164.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="btn_open_file" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/HBoxContainer" index="1"]
margin_left = 172.0
margin_right = 208.0
margin_bottom = 45.0
text = "F"

[node name="btn_create" parent="MarginContainer/VBoxContainer" index="1"]
margin_top = 106.0
margin_bottom = 143.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/HBoxContainer/btn_open_file" to="." method="_on_btn_open_file_pressed"]
